Deleted CBOW model and basic Word2Vec model

--- a/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
+++ b/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
@@ -66,13 +66,18 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn import feature_extraction, linear_model, model_selection, preprocessing\n",
+    "from sklearn import linear_model, model_selection, preprocessing\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.metrics import f1_score\n",
     "from nltk.corpus import stopwords\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn import metrics"
+    "from sklearn import metrics\n",
+    "from nltk.tokenize import sent_tokenize, word_tokenize\n",
+    "import warnings\n",
+    "import gensim\n",
+    "from gensim.models import Word2Vec\n",
+    "\n",
+    "warnings.filterwarnings(action = 'ignore')"
    ]
   },
   {
@@ -377,111 +382,6 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7608</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7609</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7610</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7611</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7612</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7613 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      target\n",
-       "0          1\n",
-       "1          1\n",
-       "2          1\n",
-       "3          1\n",
-       "4          1\n",
-       "...      ...\n",
-       "7608       1\n",
-       "7609       1\n",
-       "7610       1\n",
-       "7611       1\n",
-       "7612       1\n",
-       "\n",
-       "[7613 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.loc[:, [\"target\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -533,21 +433,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.tokenize import sent_tokenize, word_tokenize\n",
-    "import warnings\n",
-    " \n",
-    "warnings.filterwarnings(action = 'ignore')\n",
-    " \n",
-    "import gensim\n",
-    "from gensim.models import Word2Vec"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -577,42 +462,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create CBOW model\n",
-    "model1 = gensim.models.Word2Vec(words_model, min_count = 1, vector_size = 100, window = 5)\n",
-    " \n",
     "# Create Skip Gram model\n",
-    "model2 = gensim.models.Word2Vec(words_model, min_count = 1, vector_size = 100, window = 5, sg = 1)"
+    "model = Word2Vec(words_model, min_count = 1, vector_size = 100, window = 5, sg = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(21907952, 53788100)"
+       "(21907060, 53788100)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Training models\n",
-    "model1.train(X_train[\"text\"].to_list(), total_examples=X_train[\"text\"].size, epochs=100)\n",
-    "model2.train(X_train[\"text\"].to_list(), total_examples=X_train[\"text\"].size, epochs=100)"
+    "model.train(X_train[\"text\"].to_list(), total_examples=X_train[\"text\"].size, epochs=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,6 +509,7 @@
     "            # Decompose sentences into words\n",
     "            for w in word_tokenize(s):\n",
     "                if w.lower() in words:\n",
+    "                # if w.lower() in model.wv:\n",
     "                    vector_for_sentence += model.wv[w.lower()]         # sum of word vectors\n",
     "            vect_X[n] = vector_for_sentence     # replace to sentence vector\n",
     "\n",
@@ -636,20 +518,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vect_Xtr1 = text_to_vec(X_train, model1)\n",
-    "vect_Xtr2 = text_to_vec(X_train, model2)\n",
-    "\n",
-    "vect_Xte1 = text_to_vec(X_test, model1)\n",
-    "vect_Xte2 = text_to_vec(X_test, model2)"
+    "vect_Xtr = text_to_vec(X_train, model)\n",
+    "vect_Xte = text_to_vec(X_test, model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Apply ML models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4-1. Logistic Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -658,23 +551,20 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Fit the data\n",
-    "logreg_model1 = LogisticRegression()\n",
-    "logreg_model1.fit(vect_Xtr1, y_train)\n",
-    "\n",
-    "logreg_model2 = LogisticRegression()\n",
-    "logreg_model2.fit(vect_Xtr2, y_train)"
+    "logreg_model = LogisticRegression()\n",
+    "logreg_model.fit(vect_Xtr, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -682,21 +572,25 @@
      "output_type": "stream",
      "text": [
       "Accuracy of logistic regression classifier with CBOW model on test set: 0.52\n",
-      "Accuracy of logistic regression classifier with Skip Gram model on test set: 0.52\n"
+      "Accuracy of logistic regression classifier with Skip Gram model on test set: 0.62\n",
+      "Accuracy of logistic regression classifier with basic Word2Vec model on test set: 0.52\n"
      ]
     }
    ],
    "source": [
-    "yl_pred1 = logreg_model1.predict(vect_Xte1)\n",
-    "yl_pred2 = logreg_model2.predict(vect_Xte2)\n",
+    "yl_pred = logreg_model.predict(vect_Xte)\n",
     "\n",
-    "error_logreg1 = metrics.f1_score(y_test, yl_pred1, labels=None, pos_label=1, average='binary', \n",
-    "                                sample_weight=None, zero_division='warn')\n",
-    "error_logreg2 = metrics.f1_score(y_test, yl_pred2, labels=None, pos_label=1, average='binary', \n",
+    "error_logreg = metrics.f1_score(y_test, yl_pred, labels=None, pos_label=1, average='binary', \n",
     "                                sample_weight=None, zero_division='warn')\n",
     "# error_logreg = metrics.roc_auc_score(y_test, yl_pred1)   # AUC(area under curve) of ROC curve\n",
-    "print('Accuracy of logistic regression classifier with CBOW model on test set: {:.2f}'.format(error_logreg1))\n",
-    "print('Accuracy of logistic regression classifier with Skip Gram model on test set: {:.2f}'.format(error_logreg1))"
+    "print('Accuracy of logistic regression classifier with Skip Gram model on test set: {:.2f}'.format(error_logreg))  # 0.62"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4-2. Linear SVC"
    ]
   },
   {
@@ -705,6 +599,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4-3. Naive Bayes"
+   ]
   },
   {
    "cell_type": "code",
@@ -860,7 +761,9 @@
     "- Word2Vec\n",
     "- tweettoeknizer \n",
     "- tokenize -> lower -> Counter() and .most_common()\n",
-    "- remove stop words stopwords.word('english')? english_stops?"
+    "- remove stop words stopwords.word('english')? english_stops?\n",
+    "- Linear SVC\n",
+    "- Naive Bayes"
    ]
   },
   {
