--- a/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
+++ b/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
@@ -66,7 +66,6 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn import linear_model, model_selection, preprocessing\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from nltk.corpus import stopwords\n",
@@ -74,8 +73,11 @@
     "from sklearn import metrics\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize\n",
     "import warnings\n",
-    "import gensim\n",
     "from gensim.models import Word2Vec\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.datasets import make_classification\n",
     "\n",
     "warnings.filterwarnings(action = 'ignore')"
    ]
@@ -399,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +421,7 @@
        "Name: id, Length: 5329, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,16 +474,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(21907060, 53788100)"
+       "(21907038, 53788100)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -551,39 +553,37 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Fit the data\n",
-    "logreg_model = LogisticRegression()\n",
-    "logreg_model.fit(vect_Xtr, y_train)"
+    "reg_model = LogisticRegression()\n",
+    "reg_model.fit(vect_Xtr, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of logistic regression classifier with CBOW model on test set: 0.52\n",
-      "Accuracy of logistic regression classifier with Skip Gram model on test set: 0.62\n",
-      "Accuracy of logistic regression classifier with basic Word2Vec model on test set: 0.52\n"
+      "Accuracy of logistic regression classifier with Skip Gram model on test set: 0.59\n"
      ]
     }
    ],
    "source": [
-    "yl_pred = logreg_model.predict(vect_Xte)\n",
+    "yr_pred = reg_model.predict(vect_Xte)\n",
     "\n",
-    "error_logreg = metrics.f1_score(y_test, yl_pred, labels=None, pos_label=1, average='binary', \n",
+    "error_reg = metrics.f1_score(y_test, yr_pred, labels=None, pos_label=1, average='binary', \n",
     "                                sample_weight=None, zero_division='warn')\n",
     "# error_logreg = metrics.roc_auc_score(y_test, yl_pred1)   # AUC(area under curve) of ROC curve\n",
-    "print('Accuracy of logistic regression classifier with Skip Gram model on test set: {:.2f}'.format(error_logreg))  # 0.62"
+    "print('Accuracy of logistic regression classifier with Skip Gram model on test set: {:.2f}'.format(error_reg))  # 0.59"
    ]
   },
   {
@@ -595,10 +595,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('standardscaler', StandardScaler()),\n",
+       "                ('linearsvc', LinearSVC(random_state=0, tol=1e-05))])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fit the data\n",
+    "linearsvc = make_pipeline(StandardScaler(), LinearSVC(random_state=0, tol=1e-5))\n",
+    "linearsvc.fit(vect_Xtr, y_train)\n",
+    "\n",
+    "# print(linearsvc.named_steps['linearsvc'].coef_)\n",
+    "# print(linearsvc.named_steps['linearsvc'].intercept_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of linear SVC classifier on test set: 0.63\n"
+     ]
+    }
+   ],
+   "source": [
+    "ys_pred = linearsvc.predict(vect_Xte)\n",
+    "error_svc = metrics.f1_score(y_test, ys_pred, labels=None, pos_label=1, average='binary', \n",
+    "                                sample_weight=None, zero_division='warn')\n",
+    "                                \n",
+    "print('Accuracy of linear SVC classifier on test set: {:.2f}'.format(error_svc))  # 0.63"
+   ]
   },
   {
    "cell_type": "markdown",
