--- a/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
+++ b/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,13 +78,15 @@
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.datasets import make_classification\n",
+    "from nltk.tokenize import TweetTokenizer\n",
+    "import re\n",
     "\n",
     "warnings.filterwarnings(action = 'ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +185,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -235,8 +237,8 @@
     }
    ],
    "source": [
-    "print(train[train[\"target\"] == 0][\"text\"].values[10])       # not a disaster tweet\n",
-    "print(train[train[\"target\"] == 1][\"text\"].values[1])  # disaster tweet"
+    "print(train[train[\"target\"] == 0][\"text\"].values[10])   # not a disaster tweet\n",
+    "print(train[train[\"target\"] == 1][\"text\"].values[1])    # disaster tweet"
    ]
   },
   {
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +367,7 @@
        "4   7  Just got sent this photo from Ruby #Alaska as ...       1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -401,41 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4812     6849\n",
-       "2080     2988\n",
-       "652       944\n",
-       "3528     5043\n",
-       "3007     4321\n",
-       "        ...  \n",
-       "7248    10378\n",
-       "7606    10866\n",
-       "1885     2708\n",
-       "3865     5496\n",
-       "3397     4864\n",
-       "Name: id, Length: 5329, dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Store \"id\"\n",
-    "id_train = X_train[\"id\"]\n",
-    "id_test = X_test[\"id\"]\n",
-    "id_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,16 +442,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(21907038, 53788100)"
+       "(21908027, 53788100)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +521,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,14 +534,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of logistic regression classifier with Skip Gram model on test set: 0.59\n"
+      "Accuracy of logistic regression classifier with Skip Gram model on test set: 0.60\n"
      ]
     }
    ],
@@ -583,7 +551,7 @@
     "error_reg = metrics.f1_score(y_test, yr_pred, labels=None, pos_label=1, average='binary', \n",
     "                                sample_weight=None, zero_division='warn')\n",
     "# error_logreg = metrics.roc_auc_score(y_test, yl_pred1)   # AUC(area under curve) of ROC curve\n",
-    "print('Accuracy of logistic regression classifier with Skip Gram model on test set: {:.2f}'.format(error_reg))  # 0.59"
+    "print('Accuracy of logistic regression classifier with Skip Gram model on test set: {:.2f}'.format(error_reg))  # 0.60"
    ]
   },
   {
@@ -595,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -605,14 +573,14 @@
        "                ('linearsvc', LinearSVC(random_state=0, tol=1e-05))])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Fit the data\n",
-    "linearsvc = make_pipeline(StandardScaler(), LinearSVC(random_state=0, tol=1e-5))\n",
+    "linearsvc = make_pipeline(StandardScaler(), LinearSVC(random_state=0, tol=1e-5))    # try with lower tol\n",
     "linearsvc.fit(vect_Xtr, y_train)\n",
     "\n",
     "# print(linearsvc.named_steps['linearsvc'].coef_)\n",
@@ -621,14 +589,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of linear SVC classifier on test set: 0.63\n"
+      "Accuracy of linear SVC classifier on test set: 0.60\n"
      ]
     }
    ],
@@ -644,7 +612,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4-3. Naive Bayes"
+    "### 4-3. Gaussian Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GaussianNB()"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "gnb = GaussianNB()\n",
+    "gnb.fit(vect_Xtr, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Gaussian Naive Bayes on test set: 0.62\n"
+     ]
+    }
+   ],
+   "source": [
+    "yg_pred = gnb.predict(vect_Xte)\n",
+    "\n",
+    "error_gnb = metrics.f1_score(y_test, yg_pred, labels=None, pos_label=1, average='binary', \n",
+    "                                sample_weight=None, zero_division='warn')\n",
+    "                                \n",
+    "print('Accuracy of Gaussian Naive Bayes on test set: {:.2f}'.format(error_gnb))  # 0.62"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Apply to the testing dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vect_test = text_to_vec(test, model)\n",
+    "y_pred = pd.DataFrame(linearsvc.predict(vect_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create csv file\n",
+    "y_submit = y_pred.to_csv('submission.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. How can we improve accuracy?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6-1. Improve preprocessing"
    ]
   },
   {
@@ -652,20 +712,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Convert a collection of text documents to a matrix of token counts\n",
+    "count_vectorizer = CountVectorizer(stop_words=\"english\")\n",
+    "count_train = count_vectorizer.fit_transform(X_train[\"text\"].values)\n",
+    "count_test = count_vectorizer.transform(X_test[\"text\"].values)\n",
+    "\n",
+    "print(count_train.shape, count_train[10].shape)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "count_vectorizer.get_stop_words()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_train[5000]"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "------------------------------------------"
+    "### 6-2. Improve ML model"
    ]
   },
   {
@@ -675,9 +753,9 @@
    "outputs": [],
    "source": [
     "# Add intercepts(ones)\n",
-    "Xtr1 = np.hstack([np.ones((vect_Xtr1.shape[0],1)), vect_Xtr1[:,:] ])   \n",
-    "Ytr1 = y_train\n",
-    "print(\"Xtr1: \" + str(Xtr1.shape), \" Ytr1: \"+ str(Ytr1.shape))"
+    "Xtr1 = np.hstack([np.ones((vect_Xtr.shape[0],1)), vect_Xtr[:,:] ])   \n",
+    "ytr1 = y_train\n",
+    "print(\"Xtr1: \" + str(Xtr1.shape), \" Ytr1: \"+ str(ytr1.shape))"
    ]
   },
   {
@@ -731,7 +809,7 @@
     "n_span = np.arange(epoch_size)\n",
     "l_epoch_span = 1/((1+(2*n_span))**3)    # list of learning rates\n",
     "init_weights = np.zeros((1,Xtr1.shape[1]))\n",
-    "weights = train_weights(Xtr1, Ytr1, l_epoch_span, epoch_size, init_weights) "
+    "weights = train_weights(Xtr1, ytr1, l_epoch_span, epoch_size, init_weights) "
    ]
   },
   {
@@ -746,72 +824,6 @@
     "\n",
     "print(Ypred1.size, type(Ypred1))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "_____"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert a collection of text documents to a matrix of token counts\n",
-    "count_vectorizer = CountVectorizer(stop_words=\"english\")\n",
-    "count_train = count_vectorizer.fit_transform(X_train[\"text\"].values)\n",
-    "count_test = count_vectorizer.transform(X_test[\"text\"].values)\n",
-    "\n",
-    "print(count_train.shape, count_train[10].shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "count_vectorizer.get_stop_words()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "count_train[5000]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "text preprocessing\n",
-    "- Word2Vec\n",
-    "- tweettoeknizer \n",
-    "- tokenize -> lower -> Counter() and .most_common()\n",
-    "- remove stop words stopwords.word('english')? english_stops?\n",
-    "- Linear SVC\n",
-    "- Naive Bayes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
