--- a/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
+++ b/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,16 +77,17 @@
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.datasets import make_classification\n",
-    "from nltk.tokenize import TweetTokenizer\n",
-    "import re\n",
+    "# from sklearn.datasets import make_classification\n",
+    "# from nltk.tokenize import TweetTokenizer\n",
+    "# import re\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
     "\n",
     "warnings.filterwarnings(action = 'ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +186,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +368,7 @@
        "4   7  Just got sent this photo from Ruby #Alaska as ...       1"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +404,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Store \"id\"\n",
+    "id_train = train[\"id\"]\n",
+    "id_test = test[\"id\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,16 +454,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(21908027, 53788100)"
+       "(21906843, 53788100)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +533,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,14 +546,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of logistic regression classifier with Skip Gram model on test set: 0.60\n"
+      "Accuracy of Logistic Regression classifier with Skip Gram model on test set: 0.59\n"
      ]
     }
    ],
@@ -551,7 +563,7 @@
     "error_reg = metrics.f1_score(y_test, yr_pred, labels=None, pos_label=1, average='binary', \n",
     "                                sample_weight=None, zero_division='warn')\n",
     "# error_logreg = metrics.roc_auc_score(y_test, yl_pred1)   # AUC(area under curve) of ROC curve\n",
-    "print('Accuracy of logistic regression classifier with Skip Gram model on test set: {:.2f}'.format(error_reg))  # 0.60"
+    "print('Accuracy of Logistic Regression classifier with Skip Gram model on test set: {:.2f}'.format(error_reg))  # 0.60"
    ]
   },
   {
@@ -563,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -573,14 +585,14 @@
        "                ('linearsvc', LinearSVC(random_state=0, tol=1e-05))])"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Fit the data\n",
-    "linearsvc = make_pipeline(StandardScaler(), LinearSVC(random_state=0, tol=1e-5))    # try with lower tol\n",
+    "linearsvc = make_pipeline(StandardScaler(), LinearSVC(random_state=0, tol=1e-5))\n",
     "linearsvc.fit(vect_Xtr, y_train)\n",
     "\n",
     "# print(linearsvc.named_steps['linearsvc'].coef_)\n",
@@ -589,14 +601,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of linear SVC classifier on test set: 0.60\n"
+      "Accuracy of Linear SVC classifier on test set: 0.64\n"
      ]
     }
    ],
@@ -605,7 +617,7 @@
     "error_svc = metrics.f1_score(y_test, ys_pred, labels=None, pos_label=1, average='binary', \n",
     "                                sample_weight=None, zero_division='warn')\n",
     "                                \n",
-    "print('Accuracy of linear SVC classifier on test set: {:.2f}'.format(error_svc))  # 0.63"
+    "print('Accuracy of Linear SVC classifier on test set: {:.2f}'.format(error_svc))  # 0.62"
    ]
   },
   {
@@ -617,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -626,20 +638,19 @@
        "GaussianNB()"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.naive_bayes import GaussianNB\n",
     "gnb = GaussianNB()\n",
     "gnb.fit(vect_Xtr, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -668,22 +679,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vect_test = text_to_vec(test, model)\n",
-    "y_pred = pd.DataFrame(linearsvc.predict(vect_test))"
+    "# Vectorize original train & test data set\n",
+    "vect_train = text_to_vec(train, model) \n",
+    "vect_test = text_to_vec(test, model)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GaussianNB()"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fit\n",
+    "linearsvc.fit(vect_train, train['target'])\n",
+    "gnb.fit(vect_train, train['target'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict\n",
+    "pred_SVC = pd.DataFrame(linearsvc.predict(vect_test))\n",
+    "pred_NB = pd.DataFrame(gnb.predict(vect_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add 'id'\n",
+    "pred_SVC = pd.concat([id_test, pred_SVC], axis=1)\n",
+    "pred_SVC = pred_SVC.rename(columns={0: \"target\"})\n",
+    "\n",
+    "pred_NB = pd.concat([id_test, pred_NB], axis=1)\n",
+    "pred_NB = pred_NB.rename(columns={0: \"target\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create csv file\n",
-    "y_submit = y_pred.to_csv('submission.csv', index=False)"
+    "submit_SVC = pred_SVC.to_csv('submission_SVC.csv', index=False) # score : 0.72571\n",
+    "submit_NB = pred_NB.to_csv('submission_NB.csv', index=False)    # score : 0.58320"
    ]
   },
   {
